--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <body>
         <div class="main container">
             <div class="title container">
-                <h1>		<img src="https://www.clesence.fr/img/footer-logo.png"/>Votre nouvel outil TikIT</h1>
+		<img src="https://www.clesence.fr/img/footer-logo.png"/>
+                <h1>Votre nouvel outil TikIT</h1>
             </div>
             
             <div class="subtitle container">
