--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
             
             <div class="subtitle container">
-                <h4>Découvrez comment créer un ticket à l'aide de ce tutoriel vidéo :</h4>
+                <h4>Découvrez comment créer un ticket à l'aide de ce <a href="https://www.youtube.com/watch?v=RLwiZTYUNkI">tutoriel vidéo</a> :</h4>
             </div>
 
             <div class="video container">
