--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <body>
         <div class="main container">
             <div class="title container">
-		<img src="https://www.clesence.fr/img/footer-logo.png"/>
+		<img id="clesence" src="https://www.clesence.fr/img/footer-logo.png"/>
+		<img id="tickit" src="https://support.clesence.fr/marketplace/branding/front/image.load.php?target=login_page_logo"/>
                 <h1>Votre nouvel outil TikIT</h1>
             </div>
             
