--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="main container">
             <div class="title container">
 		<img id="clesence" src="https://www.clesence.fr/img/footer-logo.png"/>
-		<img id="tickit" src="https://support.clesence.fr/marketplace/branding/front/image.load.php?target=login_page_logo"/>
+		<img id="tickit" src="https://i.ibb.co/b6XBw1G/tickit-icon-full.png"/>
                 <h1>Votre nouvel outil TikIT</h1>
             </div>
             
