--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             
             <div class="subtitle container">
-                <h4>Découvrez comment créer un ticket à l'aide de ce tutoriel vidéo :</h4>
+                <h4>Découvrez les bases de votre nouvel outil de ticket à l'aide de ce tutoriel :</h4>
             </div>
 
             <div class="video container">
