--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             
             <div class="subtitle container">
-                <h4>Découvrez comment signaler un problème depuis GENESYS :</h4>
+                <h4>Découvrez comment facilement signaler un problème  :</h4>
             </div>
 
             <div class="video container">
