--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             
             <div class="subtitle container">
-                <h4>Découvrez son fonctionnement grâce à ce tutoriel :</h4>
+                <h4>Découvrez la fonctionnalité grâce à ce tutoriel :</h4>
             </div>
 
             <div class="video container">
